--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start:prod": "node scripts/startProd.js",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write \"src/**/*.{js,json,css,md}\"",
-    
+    "docker:build": "docker build --rm -t cullenjett/react-ssr-boilerplate .",
+    "docker:start": "docker run --rm -it -p 3000:3000 cullenjett/react-ssr-boilerplate",
+    "docker": "npm run docker:build && npm run docker:start"
   },
   "husky": {
     "hooks": {
